--- a/uniswap-interface-moonbeam/package.json
+++ b/uniswap-interface-moonbeam/package.json
@@ -104,5 +104,8 @@
       "last 1 safari version"
     ]
   },
-  "license": "GPL-3.0-or-later"
+  "license": "GPL-3.0-or-later",
+  "dependencies": {
+    "neoswap-sdk": "^1.0.5"
+  }
 }
