--- a/uniswap-interface-moonbeam/tsconfig.json
+++ b/uniswap-interface-moonbeam/tsconfig.json
@@ -12,8 +12,8 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "strict": true,
-    "alwaysStrict": true,
+    "strict": false,
+    "alwaysStrict": false,
     "strictNullChecks": true,
     "noUnusedLocals": true,
     "noFallthroughCasesInSwitch": true,
